2007-05-30  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 04266] Bug fix when tab browsing
	* fm.h, main.c: fix for tab browsing.

2007-05-30  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 04265] compile error when #undef USE_BG_COLOR
	* terms.c: add #ifdef __CYGWIN__.

2007-05-30  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 04264] Re: road to 0.5.2
	* po/makefile.in.in, scripts/*/Makefile.in: add datarootdir.

2007-05-29  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 04262] FreeBSD sysmouse (Re: road to 0.5.2)
	* configure.ac: unbreak sysmouse support, pointed out by 
	  Travis Poppe <tlp@lickwid.net>.
	* configure: regenerated.

2007-05-29  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 04260] Warning (Re: road to 0.5.2)
	* main.c, display.c: delete unused macros, change void to static void.

2007-05-29  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 04259] long long (Re: road to 0.5.2)
	* Makefile.in, aclocal.m4: move 'gc' from $LIBS to $LIBGC.
	* configure: regenerated.

2007-05-29  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 04256] Re: road to 0.5.2
	* scripts/Makefile.in, scripts/w3mhelp.cgi.in: add datarootdir.

2007-05-28  Hideyuki SHIRAI <shirai@meadowy.org>

	* [w3m-dev 04251] Re: road to 0.5.2
	* po/w3m.pot: pot-update.

2007-05-27  Hiroyuki Ito <ZXB01226@nifty.com>

	* [w3m-dev 04252] Re: road to 0.5.2
	* Makefile.in: add datarootdir for Autoconf 2.60 and later.

2007-05-23  NOKUBI Takatsugu <knok@daionet.gr.jp>

	* [w3m-dev 04155] w3m mingw patch
	* config.h, configure.ac, etc.c, file.c, ftp.c, indep.c, istream.c, 
	  local.c, main.c, rc.c, terms.c, url.c: fix for minpw, except for
	    deleting nsl and dl from configure.ac.
	* configure: regenerated.

2007-05-23  Hiroyuki Ito <ZXB01226@nifty.com>

	* [w3m-dev 04233], [w3m-dev 04236] Re: <del>, <s>, <ins>, and so on
	* file.c, fm.h, po/ja.po, po/w3m.pot, rc.c, table.c:
	    expand display_ins_del to select a type of fontify.